--- a/app/bmc/prj.conf
+++ b/app/bmc/prj.conf
@@ -30,3 +30,16 @@ CONFIG_REBOOT=y
 # We always expect MCUBoot to be the primary bootloader
 CONFIG_BOOTLOADER_MCUBOOT=y
 CONFIG_MCUBOOT_SIGNATURE_KEY_FILE="bootloader/mcuboot/root-rsa-2048.pem"
+
+CONFIG_LOG=y
+CONFIG_LOG_MODE_MINIMAL=y
+
+CONFIG_DEBUG_OPTIMIZATIONS=y
+CONFIG_DEBUG_INFO=y
+
+CONFIG_USE_SEGGER_RTT=y
+
+CONFIG_MAIN_STACK_SIZE=4096
+# Never block whey trying to write logs
+CONFIG_LOG_BACKEND_RTT_MODE_OVERWRITE=y
+CONFIG_TT_APP_LOG_LEVEL_DBG=y
